--- a/main.tex
+++ b/main.tex
@@ -154,7 +154,7 @@ Consider the two figures shown below. While Fig.\ref{fig:covid2020Feb} is highly
 
 For now, we start by defining quantitative measures, i.e. measures of data visibility that can be understood by a computer and assessed on a purely mathematical basis. A discussion on how well the developed algorithms and approaches hold up from a qualitative viewpoint will be conducted later on.
 
-Fundamental work into the quantification of visual quality was done both by Tufte in his 1983 book, \textit{The visual display of quantitative information graphics press} and Miller et al. in \textit{The Need For Metrics In Visual Information Analysis}. Based on this, follow-up work and further considerations regarding visibility problems and sorting we develop a novel approach to visualize multidimensional data in a scatterplot designed to transport as much information as possible.
+Fundamental work into the quantification of visual quality was done both by Tufte in his 1983 book, \textit{The visual display of quantitative information graphics press} and Miller et al. in \textit{The Need For Metrics In Visual Information Analysis}. Based on this, follow-up work and further considerations regarding visibility problems and sorting we develop a novel approach to visualize multidimensional data in a scatter plot designed to transport as much information as possible.
 
 Our main resource will be the paper by Sergio Cabello et al. \textit{Algorithmic Aspects of Proportional Symbol Maps}. In it, the authors discuss the difficulty of maximizing utility measures with regards to so-called "physically realizable drawings", in particular they prove this problem to be NP-hard. As a consequence, they restrict their further discussion on a distinct subset of physically realizable drawings, called "stacking drawings" which are determined solely by a total ordering of the symbols, called the "stacking order". They then derive algorithms that determine optimal stacking orders in polynomial runtime. Those algorithms are designed for datasets where each \textit{glyph} only depicts a single quantity.
 
@@ -200,7 +200,7 @@ For a fixed stacking order $\phi$, we will denote the disk $\phi(i)$ as $D_i$. W
   U_i^{cov} & =\partial D_i \cap \bigcup_{j>i} D_{j}.
 \end{align*}
 
-furthermore, we denote the length of the visible perimeter as $|U^{vis}_i|$. Two global utility functions come to mind:
+Furthermore, we denote the length of the visible perimeter as $|U^{vis}_i|$. Two global utility functions come to mind:
 
 \begin{align*}
   \lambda_{min} (D) & = \min_{i \in [n]}|U_i^{vis}| \\
@@ -232,7 +232,7 @@ We won't attempt to construct an algorithm for the sum problem and instead take 
 
 The first type of glyph we discuss are nested disks. Formally, every glyph $G^i$ is given by a set of disks $G^i_1,...,G^i_k$ such that $G^i_{j+1}\subset G^i_j$ for all $j\in \{1,...,k-1 \}$. Often times figures using nested disks also center all the disks at the same point.
 The second type of glyphs we use are pie charts. A pie chart is formally given by a disk $D_i$ and a set $\{\alpha_1^i,...\alpha_k^i\}$ of dividing lines which we can encode as angle in $[0,\ 2\pi]$. Usually the dividing lines separate areas of different color representing different fractions of a sum.
-Finally, we take a new approach and select squares as glyphs to represent data which are especially interesting as they are not axially symmmetrical like circles. Though squares are generally described by vertex sets representing corners of a square or a center and a width our approach allows a description similar to pie charts in the sense of optimality.
+Finally, we take a new approach and select squares as glyphs to represent data which are especially interesting as they are not axially symmetrical like circles. Though squares are generally described by vertex sets representing corners of a square or a center and a width our approach allows a description similar to pie charts in the sense of optimality.
 
 In the next section we will discuss a simple and versatile approach to determine optimal stacking orders for glyphs maximizing utility functions with specific properties for glyph stacking order drawings and then apply it to our glyphs and some utility functions.
 
@@ -770,7 +770,7 @@ For the pie Charts we will be using the following values for our comparison of t
 \end{figure}
 
 
-Our pie chart stacking is guaranteed to be optimal by the greedy stacking theorem. Only our algorithm manages to make all separation points visible for each pie glyph. The painters algorithm (using the optimal rotations subroutine) still outperforms more naive approaches having only 6 lines covered. Our algorithm is also better in the secondary utilities although the other algorithms may ''abuse`` the fact that they cover a few of the lines. 
+Our pie chart stacking is guaranteed to be optimal by the greedy stacking theorem. Only our algorithm manages to make all separation points visible for each pie glyph. The painters algorithm (using the optimal rotations subroutine) still outperforms more naive approaches having only 6 lines covered. Our algorithm is also better in the secondary utilities although the other algorithms may ''abuse`` the fact that they cover a few of the lines.
 
 The date for this dataset was chosen, such that the optimum is not $0$, i.e., it is possible to make all pie separation points visible. Our algorithm also performs well on other instances as can be verified in the application.
 
@@ -816,7 +816,7 @@ For the squares we will be using the following values for our comparison of the 
     date: 02.08.2020  , parameters: $M=50$, $S=500$ and $\text{minimum number of cases}=5000$  }
 \end{figure}
 
-We can see that our heuristic of transforming the square mosaic into a pie chart worked well. Our algorithm produces by far the least number of covered separation points. However, it is not guaranteed to be optimal and it does not beat even the naive random approaches on a secondary performance indicator, but the indicator is not very significant since the actual value should be 0. 
+We can see that our heuristic of transforming the square mosaic into a pie chart worked well. Our algorithm produces by far the least number of covered separation points. However, it is not guaranteed to be optimal and it does not beat even the naive random approaches on a secondary performance indicator, but the indicator is not very significant since the actual value should be 0.
 
 
 
@@ -862,7 +862,7 @@ Furthermore, the ratio between covered points and overall points/lines in the sq
 
   \bibitem [8] {cabello}Sergio Cabello, Herman Haverkort, Marc van Kreveld, Bettina Speckmann. Algorithmic Aspects of Proportional Symbol Maps. In: Algorithmica (2010) 58: 543–565. Published with open access at Springerlink.com.%
 
-  \bibitem [9]{data} Dong E, Du H, Gardner L. An interactive web-based dashboard to track COVID-19 in real time. Lancet Inf Dis. 20(5):533-534. doi: 10.1016/S1473-3099(20)30120-1, \url{https://github.com/CSSEGISandData/COVID-19}
+  \bibitem [9] {data} Dong E, Du H, Gardner L. An interactive web-based dashboard to track COVID-19 in real time. Lancet Inf Dis. 20(5):533-534. doi: 10.1016/S1473-3099(20)30120-1, \url{https://github.com/CSSEGISandData/COVID-19}
 
 
 
