--- a/main.tex
+++ b/main.tex
@@ -826,20 +826,15 @@ We can see that our heuristic of transforming the square mosaic into a pie chart
 
 In this work four types of glyphs were compared to each other using a subset of physically realizable drawings called stacking order algorithms. The glyph types were: (1) Centered nested disks, (2) nested disks, (3) Pie charts, and (4) Squares.
 We introduced several new types of glyphs compared to the mainstream representation: These are (1) the degree of freedom to freely shift inner disks in the nested disks, (2) pie charts with movable proportions and (3) squares.
-Further, we have shown that it is NP-hard to decide, whether for a given set $D$ of disks with boundary points $P_i$ there is a physical realization, with rotation as additional degree of freedom, such that the minimum distance of any of the distinguished points $p_i$ to the next covered point along the perimeter of its perimeter is greater or equal to $k$. In a very similar manner squares as glyphs can be treated in proportional symbol maps in our approach.
+Further, we have shown that it is NP-hard to decide, whether for a given set $D$ of disks with boundary points $P_i$ there is a physical realization, with rotation as additional degree of freedom, such that the minimum distance of any of the distinguished points $p_i$ to the next covered point along the perimeter of its perimeter is greater or equal to $k$. In a very similar manner squares as glyphs can be treated in proportional symbolic maps in our approach.
 
 The pie-chart approach enables an utility improvement for the squares as shown in Section 3. Overall runtime is similar and in the order of $O(n^3)$, however, can be brought down to $O(n^2 \log n)$ with a good choice of data structures similar to the approach in \cite{cabello}.
 Nevertheless, some heuristics are necessary. Glyphs are a trade-off between content and comparability. At the bottom line it can be safely said that a greedy approach as approximation to the optimal solution is a good choice once more.
-We found in accordance with \cite{tufte} that utility is hard to impossible to be compared among glyphs of different types. As shown in the experiments, disks can be compared to each other as can be pies and squares with the given approach.
+We found in accordance with \cite{tufte} that utility is difficult to impossible to be compared among glyphs of different types. As shown in the experiments, disks can be compared to each other as can be pies and squares with the given approach.
 
-It is important to note that the different glyphs have a focus on different aspects of the data. The nested disks allow a comparison between sub-disks of different glyphs, e.g., we can easily compare the number of deceased citizens of the US to the number of confirmed cases in Germany. On the other hand the comparison of the different features in one glyph is difficult, e.g., comparing the ratio of deceased and recovered for any glyph is difficult.\\
-The pie charts are the exact opposite. It is easy to make a ratio comparison for one glyph but it's hard to compare sub-disks of different glyphs.\\
-If we assume linear scaling (not logarithmic) the square approach should be the best of both worlds, because they nicely depict ratios for a single glyph and the sub-rectangles are easily compared between different glyphs. The downside of the squares are a visualisation which is perceived rather chaotic and a far harder optimization problem since a simple greedy approach does not work. Even the hardness of calculating an optimal stacking with optimal rotations needs further investigation.
+Note that different glyphs have a focus on different aspects of the data. The nested disks allow a comparison between sub-disks of different glyphs, e.g., we can compare the number of deceased citizens of the US to the number of confirmed cases in Germany. On the other hand the comparison of the different features in one glyph is difficult, e.g., comparing the ratio of deceased and recovered for any glyph is difficult. For pie charts the exact opposite is the case, as it is easy to make a ratio comparison for one glyph but it's difficult to compare sub-disks of different glyphs. Assuming linear scaling the square approach should be the best of both worlds, as they depict ratios for a single glyph nicely and the sub-rectangles are easily compared among different glyphs. The downside of the squares are a seemingly chaotic visualisation and a far more difficult optimization problem since a simple greedy approach does not work. Even the difficulty of calculating an optimal stacking with optimal rotations needs further investigation.
 
 Furthermore, the ratio between covered points and overall points/lines in the square/pie approach can be seen as a discrete version of the relative visibility which we used for the nested disks. If we go on step further we could arbitrarily add new important points. If we then take the limit, the value of the ratio should approach the relative visibility, which may allow a better comparison. However, this needs to be explored in further work.
-
-\newpage
-
 
 % ----------------------
 \begin{thebibliography}{999}
