--- a/slides/main.tex
+++ b/slides/main.tex
@@ -60,7 +60,7 @@
 		\item recovered cases are colored green, deceased cases are colored black and 		the infected are colored red
 		\item logarithmic scaling dependent on two parameters:
 		\begin{align*}
-			r=M* \log \left( \frac{c_i S}{c_{max}} \right)
+			r=M* \log \left( \frac{c_i S}{c_{max}} +1 \right)
 		\end{align*}
 		$M$ is the maximum size of a glyph, $S$ is a scaling factor and $c_{max}$ is 			the maximum number of cases
 	\end{itemize}
